# ohtuminiproject

./: .coveragerc  .coveragesrc  .gitignore  .pylintrc  .pyproject.toml.swp  LICENSE  README.md  final report.md  log.html  lukuvinkki_schema.sql  output.xml  pyproject.toml  report.html  run_robot_tests.sh  schema.sql  tasks.py
.github/workflows/: main.yml
src/: AppLibrary.py  app.py  config.py  db.py  db_destroy.py  db_init.py  fixforheroku.py  routes.py
src/auth/: auth.py  forms.py
src/entities/: lukuvinkki.py
src/models/: user.py
src/repositories/: lukuvinkki_repository.py  user_repository.py
src/services/: lukuvinkki_service.py  user_service.py
src/templates/: addlukuvinkki.html  changelukuvinkki.html  changetype.html  choosetype.html  index.html  layout.html  login.html  logout.html  lukuvinkki.html  lukuvinkkiview.html  register.html  search.html  searchresult.html
src/tests/: lukuvinkki_repository_test.py  lukuvinkki_service_test.py  lukuvinkki_test.py  user_model_test.py  user_repository_test.py  user_service_test.py
src/tests/robot_framework/: home.robot  lukuvinkki.robot  register.robot  resource.robot  search.robot
