[tool.poetry]
name = "ohtuminiproject"
version = "0.1.0"
description = ""
authors = [
    "Pentti Lähdeaho <pentti.lahdeaho@gmail.com>",
    "Your Name <you@example.com>"
    ]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
